--- a/src/app/song-list/song-list.component.scss
+++ b/src/app/song-list/song-list.component.scss
@@ -2,7 +2,7 @@
 xmas-song-list {
   .xmas-song-list {
     padding: 0;
-
+    background: #fff;
     .mat-list-item {
       --list-border-color: rgba(0,0,0,.12);
       --list-height: 72px;
@@ -10,7 +10,7 @@ xmas-song-list {
       --list-font-size: 24px;
 
       @media only screen and (max-width: 728px) {
-        --list-heigt: 60px;
+        --list-height: 60px;
         --list-gutter: 12px;
       }
 
