--- a/src/app/song/song.component.scss
+++ b/src/app/song/song.component.scss
@@ -1,23 +1,25 @@
-.xmas-page-header {
-  padding: 24px;
-  background: #f2f2f2;
 
-}
 
 .xmas-back-button {
-  // margin: -12px 0 12px -8px;
-}
-
-.xmas-page-title {
-  font-size: 28px;
-  font-weight: 300;
-  line-height: 1em;
-  margin: 0;
+  margin-right: -16px;
 }
 
 .xmas-song-lyrics {
   font-size: 24px;
   line-height: 1.4em;
-  margin: 24px;
+  margin: 48px 24px;
   white-space: pre-line;
+
+  @media only screen and (min-width: 1024px) {
+    font-size: 32px;
+  }
+
+  @media only screen and (min-width: 1280px) {
+    font-size: 36px;
+  }
+
+  @media only screen and (max-width: 728px) {
+    font-size: 20px;
+    margin: 16px;
+  }
 }
